# my-dev-companion

./: .gitignore  LICENSE.txt  docker-compose.yml  pyproject.toml
app/: pyproject.toml
app/src/my_dev_companion.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
docker/: Dockerfile
src/: main.py
